made fos print in the consol too

--- a/.bochsrc
+++ b/.bochsrc
@@ -352,7 +352,7 @@ floppy_bootsig_check: disabled=0
 #   log: /dev/tty
 #=======================================================================
 #log: /dev/null
-log: bochs.log
+log: -
 
 #=======================================================================
 # LOGPREFIX:
@@ -449,10 +449,10 @@ debugger_log: -
 #   parport2: enabled=1, file="/dev/lp0"
 #   parport1: enabled=0
 #=======================================================================
- parport1: enabled=1, file="/dev/stdout"
+# parport1: enabled=1, file="/dev/stdout"
 # parport1: enabled=1, file="stdout"
 # parport1: enabled=1, file="console.out"
-# parport1: enabled=1, file="CON"  # or "CON:"
+parport1: enabled=1, file="CON"  # or "CON:"
 #parport1: enabled=1, file=-
 # parport1: enabled=1, file=/dev/tty
 
