added the test files for the individual modules

--- a/.bochsrc
+++ b/.bochsrc
@@ -352,7 +352,7 @@ floppy_bootsig_check: disabled=0
 #   log: /dev/tty
 #=======================================================================
 #log: /dev/null
-log: -
+log: bochs.log
 
 #=======================================================================
 # LOGPREFIX:
@@ -452,7 +452,7 @@ debugger_log: -
 # parport1: enabled=1, file="/dev/stdout"
 # parport1: enabled=1, file="stdout"
 # parport1: enabled=1, file="console.out"
-parport1: enabled=1, file="CON"  # or "CON:"
+ parport1: enabled=1, file="CON"  # or "CON:"
 #parport1: enabled=1, file=-
 # parport1: enabled=1, file=/dev/tty
 
